<resources>
    <string name="app_name">Deer Diary</string>
    <string name="deer_diary">Deer Diary</string>
    <string name="deer_logo">deer_logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registerButton">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_text">Register</string>
...
