...
    <item android:id="@+id/menu_home"
        android:title="home"
        app:showAsAction="always"
        android:icon="@drawable/ic_home_foreground"
        />
    <item
        android:id="@+id/menu_create_post"
        android:icon="@android:drawable/ic_menu_add"
        android:title="create_post"
        app:showAsAction="always" />
    <item android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile_foreground"
        android:title="profile"
...
